tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__Glassworker-AAAAAAAAAAAAAAAAAAAHrQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1965,
  "prerequisites": [
    1959
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want some custom glass shapes and configurations? A glassworker can provide some unique patterns to put in your windows. You'll need to make some glass fittings to hold the glass together.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glassworker",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1959
  ],
  "rewards": [],
  "tasks": []
}
