tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__GlowstoneChiselt-AAAAAAAAAAAAAAAAAAAHuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1977,
  "prerequisites": [
    97
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When traveling off-world, you want the best in torches. Torches that will work in no-oxygen environments like the Moon. For that, you need glowstone torches. You can chisel these torches into a variety of torch types, also proven to work in deep space.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glowstone & Chisel torches, space rated",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97
  ],
  "rewards": [],
  "tasks": []
}
