tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__GoldShulkerBox-YFUK2QflT1G3_WC8XBp2Wg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 568948138788419162,
  "prerequisites": [
    13073740252492184943,
    4346618739835698683,
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The portable equivalent of the Gold Barrel.\n\nHas §n81§r slots.\n\n[note]Can be Dyed![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lGold Shulker Box",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13073740252492184943,
    4346618739835698683,
    1148
  ],
  "rewards": [],
  "tasks": []
}
