tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__KillingWeedsandG-AAAAAAAAAAAAAAAAAAAHpA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1956,
  "prerequisites": [
    1955
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nobody likes weeds. Weedkiller will keep the weeds off your soil.\n\nBone meal can be applied to germling flowers to make them mature faster.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Killing Weeds and Growing Flowers",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1955
  ],
  "rewards": [],
  "tasks": []
}
